index de roles terminado

--- a/lang/en/views.json
+++ b/lang/en/views.json
@@ -16,5 +16,12 @@
   },
   "header": {
     "search": "Search..."
+  },
+  "roles": {
+    "title": "Role | Roles",
+    "guard_name": "Guard Name"
+  },
+  "permissions": {
+    "title": "Permission | Permissions"
   }
 }
