formulario terminado de crear

--- a/lang/en/commons.json
+++ b/lang/en/commons.json
@@ -1,7 +1,8 @@
 {
   "button": {
     "create": "Create",
-    "back": "Back"
+    "back": "Back",
+    "save": "Save"
   },
   "Actions": "Actions",
   "id": "Id",
