--- a/lang/es/views.json
+++ b/lang/es/views.json
@@ -22,6 +22,7 @@
     "guard_name": "Guard Name"
   },
   "permissions": {
-    "title": "Permiso | Permisos"
+    "title": "Permiso | Permisos",
+    "guard_name": "Guard Name"
   }
 }
