--- a/lang/en/menu.json
+++ b/lang/en/menu.json
@@ -1,5 +1,6 @@
 {
   "settings": "Settings",
   "roles": "Roles",
-  "permissions": "Permissions"
+  "permissions": "Permissions",
+  "users": "Users"
 }
