--- a/lang/en/views.json
+++ b/lang/en/views.json
@@ -24,5 +24,8 @@
   "permissions": {
     "title": "Permission | Permissions",
     "guard_name": "Guard Name"
+  },
+  "users": {
+    "title": "User | Users"
   }
 }
