--- a/lang/es/menu.json
+++ b/lang/es/menu.json
@@ -1,5 +1,6 @@
 {
   "settings": "Configuraciones",
   "roles": "Roles",
-  "permissions": "Permisos"
+  "permissions": "Permisos",
+  "users": "Usuarios"
 }
