--- a/lang/es/views.json
+++ b/lang/es/views.json
@@ -24,5 +24,8 @@
   "permissions": {
     "title": "Permiso | Permisos",
     "guard_name": "Guard Name"
+  },
+  "users": {
+    "title": "Usuario | Usuarios"
   }
 }
