comenzando con el modulo de configuraciones, agregando componentes para el crud de regions

--- a/lang/en/menu.json
+++ b/lang/en/menu.json
@@ -2,5 +2,7 @@
   "settings": "Settings",
   "roles": "Roles",
   "permissions": "Permissions",
-  "users": "Users"
+  "users": "Users",
+  "security": "Security",
+  "regions": "Regions"
 }
