preparando componentes para crud de categorias de publicacion

--- a/lang/en/menu.json
+++ b/lang/en/menu.json
@@ -4,5 +4,6 @@
   "permissions": "Permissions",
   "users": "Users",
   "security": "Security",
-  "regions": "Regions"
+  "regions": "Regions",
+  "publication-categories": "Publication Categories"
 }
