--- a/lang/en/views.json
+++ b/lang/en/views.json
@@ -32,5 +32,8 @@
   },
   "regions": {
     "title": "Region | Regions"
+  },
+  "publication-categories": {
+    "title": "Publication Category | Publication Categories"
   }
 }
