--- a/lang/es/menu.json
+++ b/lang/es/menu.json
@@ -4,5 +4,6 @@
   "permissions": "Permisos",
   "users": "Usuarios",
   "security": "Seguridad",
-  "regions": "Regiones"
+  "regions": "Regiones",
+  "publication-categories": "Categorías de Publicacion"
 }
