--- a/lang/es/commons.json
+++ b/lang/es/commons.json
@@ -29,5 +29,6 @@
   "update-success": "Actualizado con éxito",
   "email": "Correo Electrónico",
   "created_at": "Registrado",
-  "status": "Estado"
+  "status": "Estado",
+  "description": "Descripción"
 }
