crud completo de external reference

--- a/lang/en/views.json
+++ b/lang/en/views.json
@@ -35,5 +35,9 @@
   },
   "publication-categories": {
     "title": "Publication Category | Publication Categories"
+  },
+  "external-references": {
+    "title": "External Reference | External References",
+    "url": "Url"
   }
 }
