--- a/lang/es/views.json
+++ b/lang/es/views.json
@@ -34,5 +34,8 @@
   },
   "publication-categories": {
     "title": "Categoría de Publicación | Categorías de Publicaciones"
+  },
+  "external-references": {
+    "url": "Url"
   }
 }
