--- a/lang/en/menu.json
+++ b/lang/en/menu.json
@@ -5,5 +5,6 @@
   "users": "Users",
   "security": "Security",
   "regions": "Regions",
-  "publication-categories": "Publication Categories"
+  "publication-categories": "Publication Categories",
+  "external-references": "External References"
 }
