--- a/lang/es/menu.json
+++ b/lang/es/menu.json
@@ -5,5 +5,6 @@
   "users": "Usuarios",
   "security": "Seguridad",
   "regions": "Regiones",
-  "publication-categories": "Categorías de Publicacion"
+  "publication-categories": "Categorías de Publicacion",
+  "external-references": "Referencias Externas"
 }
