creando componentes para publicaciones

--- a/lang/en/menu.json
+++ b/lang/en/menu.json
@@ -6,5 +6,6 @@
   "security": "Security",
   "regions": "Regions",
   "publication-categories": "Publication Categories",
-  "external-references": "External References"
+  "external-references": "External References",
+  "publication": "Publications"
 }
