--- a/lang/en/views.json
+++ b/lang/en/views.json
@@ -39,5 +39,8 @@
   "external-references": {
     "title": "External Reference | External References",
     "url": "Url"
+  },
+  "publications": {
+    "title": "Publication | Publications"
   }
 }
