--- a/lang/es/menu.json
+++ b/lang/es/menu.json
@@ -6,5 +6,6 @@
   "security": "Seguridad",
   "regions": "Regiones",
   "publication-categories": "Categorías de Publicacion",
-  "external-references": "Referencias Externas"
+  "external-references": "Referencias Externas",
+  "publication": "Publicaciones"
 }
