--- a/lang/en/views.json
+++ b/lang/en/views.json
@@ -41,6 +41,11 @@
     "url": "Url"
   },
   "publications": {
-    "title": "Publication | Publications"
+    "title": "Publication | Publications",
+    "labels": "Labels",
+    "agg-label": "Add Label",
+    "label-instructions": "write a text and press enter. Click in label for delete",
+    "content-type": "Type the content (max. 255 characters)",
+    "content": "Content"
   }
 }
