--- a/lang/es/views.json
+++ b/lang/es/views.json
@@ -45,5 +45,8 @@
     "label-instructions": "Escriba un texto y presione enter. Presione sobre la etiqueta para eliminar",
     "content-type": "Íngrese el contenido (max. 255 caracteres)",
     "content": "Contenido"
+  },
+  "dashboard": {
+    "read-more": "Leer más en"
   }
 }
